--- a/templates/account/myProfile.html
+++ b/templates/account/myProfile.html
@@ -5,13 +5,13 @@
                 <a zf-close class="close-button hide-for-medium">&times;</a>
                 <section class="block-list custom-block-list">
                     <header class="title">
-                        <h2>{{myName}}</h2>
+                        <h3>{{myName}}</h3>
                         <img src="{{myPhoto}}" class="myPhoto"></header>
                     <ul>
-                        <li><a>Networks</a></li>
-                        <li><a>Spaces</a></li>
-                        <li><a>View Award Gallery</a></li>
-                        <li><a>Nominate an Award</a></li>
+                        <li><a><i class="fa fa-connectdevelop"></i> Networks</a></li>
+                        <li><a><i class="fa fa-cloud"></i> Spaces</a></li>
+                        <li><a><i class="fa fa-trophy"></i> View Award Gallery</a></li>
+                        <li><a><i class="fa fa-graduation-cap"></i> Nominate an Award</a></li>
                     </ul>
                 </section>
             </div>
