--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,34 +1,34 @@
 <div class="login-container">
     <div class="vertical medium-horizontal align-center grid-block">
-        <div class="grid-block medium-1 large-2 hide-for-medium hide-for-small"></div>
+        <div class="grid-block medium-1 large-2 hide-for-small"></div>
 
         <div class="grid-content medium-5 large-3 login-left">
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
-                    <img class="logo" src="assets/img/Logo_Text.png" />
+                <div class="grid-container">
+                    <img src="assets/img/Wide-310x150.png" />
                 </div>
 
             </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
+                <div class="small-10 medium-10 large-9 grid-container">
                     <input placeholder="Username" data-ng-model="user.loginEmail" type="text">
                 </div>
 
             </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
+                <div class="small-10 medium-10 large-9 grid-container">
                     <input placeholder="Password" data-ng-model="user.loginPassword" type="password">
                 </div>
 
             </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
-                    <a class="success button login-button" href="javascript:;" data-ng-click="loginNow()">LOGIN NOW</a>
+                <div class="small-10 medium-10 large-9 grid-container">
+                    <a class="button success login-button" href="javascript:;" data-ng-click="loginNow()">LOGIN NOW</a>
                 </div>
 
             </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
+                <div class="small-10 medium-10 large-9 grid-container">
                     <p class="info">
                         <img zf-iconic="" icon="thumb" size="small" class="iconic-color-warning">
                         Forgot your password? click <a herf="javascript:;">here</a> to retrieve.
@@ -44,12 +44,12 @@
 
         <div class="grid-content medium-5 large-3 login-right">
             <div class="grid-block">
-            <div class="small-12 medium-12 large-11 grid-content">
+            <div class="small-10 medium-12 large-11 grid-container">
                 <h4 class="headline">New?</h4>
             </div>
         </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
+                <div class="small-10 medium-12 large-11 grid-container">
                     <p class="text">
                         Lorem ipsum dolor sit amet, consecteur adipising elit. Quisque lobortis vel mauris bibendum tempor.
                         Aenean volutpat tristique ex in auctor.
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="grid-block">
-                <div class="small-12 medium-12 large-11 grid-content">
+                <div class="small-10 medium-12 large-11 grid-container">
                     <p>
                         <img zf-iconic="" icon="account" size="medium" class="iconic-color-warning"><a herf="javascript:;" class="sign-up-link">SIGN UP</a>
                     </p>
@@ -68,7 +68,7 @@
 
         </div>
 
-        <div class="grid-block medium-1 large-2 hide-for-medium hide-for-small"></div>
+        <div class="grid-block medium-1 large-2 hide-for-small"></div>
     </div>
 </div>
 
