--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -30,7 +30,8 @@
             <div class="grid-block">
                 <div class="small-10 medium-10 large-9 grid-container">
                     <p class="info">
-                        <img zf-iconic="" icon="thumb" size="small" class="iconic-color-warning">
+                        <!--<img zf-iconic="" icon="thumb" size="small" class="iconic-color-warning">-->
+                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i>
                         Forgot your password? click <a herf="javascript:;">here</a> to retrieve.
                     </p>
                 </div>
@@ -59,7 +60,7 @@
             <div class="grid-block">
                 <div class="small-10 medium-12 large-11 grid-container">
                     <p>
-                        <img zf-iconic="" icon="account" size="medium" class="iconic-color-warning"><a herf="javascript:;" class="sign-up-link">SIGN UP</a>
+                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a herf="javascript:;" class="sign-up-link">SIGN UP</a>
                     </p>
                 </div>
             </div>
