background image added

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8154,5 +8154,5 @@ blockquote p {
 .custom-grid-content {
   padding-top: 3px; }
 
-.body-background {
+body {
   background-image: url("/assets/img/main-background.jpg"); }
