--- a/templates/account/myProfile.html
+++ b/templates/account/myProfile.html
@@ -1,60 +1,32 @@
-<div class="vertical grid-frame myProfile">
+<div class="grid-content myProfile">
     <div class="grid-block">
         <div zf-panel id="sidebar" class="large-2 medium-grid-block sidebar vertical">
             <div class="grid-content">
                 <a zf-close class="close-button hide-for-medium">&times;</a>
                 <section class="block-list custom-block-list">
                     <header class="title">
-                        <h3>{{myName}}</h3>
                         <img src="{{myPhoto}}" class="myPhoto"></header>
                     <ul>
-                        <li><a><i class="fa fa-connectdevelop"></i> Networks</a></li>
-                        <li><a><i class="fa fa-cloud"></i> Spaces</a></li>
-                        <li><a><i class="fa fa-trophy"></i> View Award Gallery</a></li>
-                        <li><a><i class="fa fa-graduation-cap"></i> Nominate an Award</a></li>
+                        <li class="networkLinkBackground">
+                            <a ui-sref="myProfile.myNetworks">
+                                Networks
+                            </a>
+                        </li>
+                        <li class="spacesLinkBackground"><a>Spaces</a></li>
+                        <li class="viewAwardGalleryLinkBackground"><a>View Award Gallery</a></li>
+                        <li class="nominateAnAwardLinkBackground"><a>Nominate an Award</a></li>
                     </ul>
                 </section>
             </div>
         </div>
-        <div class="large-10 grid-content">
-            <div class="grid-container main-docs-section">
+
+        <div class="large-10 small-12 grid-content">
                 <a class="small secondary expand button hide-for-medium" zf-toggle="sidebar">Show Components</a>
+            <div ng-class="['ui-animation']" ui-view>
 
-                <!--<div class="grid-block">-->
-                    <!--<div class="grid-content large-8">-->
-                        <!--<div class="grid-block">-->
-                            <!--<div class="grid-content">-->
-                                <!--<h2>{{myName}}</h2>-->
-
-                                <!--<p>{{myEmail}}</p>-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <!--<div class="grid-block horizontal">-->
-                            <!--<div class="grid-content large-2">-->
-
-                            <!--</div>-->
-                            <!--<div class="grid-content large-6">-->
-                                <!--<input type="text">-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-
-                    <!--<div class="grid-content large-2">-->
-                        <!--<div class="grid-block">-->
-                            <!--<div class="grid-content">-->
-                                <!--<h1>Connection Request</h1>-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <!--<div class="grid-block">-->
-                            <!--<div class="grid-content">-->
-                                <!--<a class="button warning">Connect</a>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
             </div>
         </div>
     </div>
 </div>
+
+
