--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -1,5 +1,5 @@
 
-<div class="vertical grid-frame">
+<div class=grid-content">
     <div class="grid-block">
         <div zf-panel id="sidebar" class="large-2 medium-grid-block sidebar vertical">
             <div class="grid-content">
@@ -51,6 +51,7 @@
                 </section>
             </div>
         </div>
+
         <div class="large-10 grid-content" ng-show="$state.current.name.length">
             <div class="grid-container main-docs-section">
                 <a class="small secondary expand button hide-for-medium" zf-toggle="sidebar">Show Components</a>
