--- a/templates/account/signal.html
+++ b/templates/account/signal.html
@@ -5,8 +5,8 @@
             <div class="grid-content">
                 <div class="grid-block">
                     <div class="grid-content">
-                       <h4 class="my-name-container">Brain Tobey</h4>
-                        <p class="my-email">brain_tobey@gmail.com</p>
+                       <h4 class="my-name-container">{{myName}}</h4>
+                        <p class="my-email">{{myEmail}}</p>
                     </div>
                 </div>
             </div>
