--- a/templates/directives/kswPeoplePicker.html
+++ b/templates/directives/kswPeoplePicker.html
@@ -3,6 +3,7 @@
         <div class="grid-block">
             <div class="grid-content large-6 small-11">
                 <select ng-model="selectedPeoplePickerGroup"
+                        ng-selected="0"
                         ng-options="group as group.value for group in peoplePickerGroups"
                         data-ng-change="updatePeoplePickerResults(selectedPeoplePickerGroup)">
                 </select>
