--- a/templates/account/myNetworks.html
+++ b/templates/account/myNetworks.html
@@ -1,6 +1,6 @@
 <div class="grid-block horizontal">
     <div class="grid-content large-12">
-        <div class="grid-block vertical network-container" data-ng-if="peoplePickerFlag">
+        <div class="grid-block vertical network-container">
             <div class="grid-content">
                 <div class="grid-block">
                     <div class="grid-content large-6 small-11">
