--- a/templates/account/myProfile.html
+++ b/templates/account/myProfile.html
@@ -13,8 +13,16 @@
                             </a>
                         </li>
                         <li class="spacesLinkBackground"><a>Spaces</a></li>
-                        <li class="viewAwardGalleryLinkBackground"><a>View Award Gallery</a></li>
-                        <li class="nominateAnAwardLinkBackground"><a>Nominate an Award</a></li>
+                        <li class="viewAwardGalleryLinkBackground">
+                            <a ui-sref="myProfile.myAward">
+                                View Award Gallery
+                            </a>
+                        </li>
+                        <li class="nominateAnAwardLinkBackground">
+                            <a ui-sref="myProfile.selectAward">
+                                Nominate an Award
+                            </a>
+                        </li>
                     </ul>
                 </section>
             </div>
