--- a/templates/account/myProfile.html
+++ b/templates/account/myProfile.html
@@ -1,38 +1,36 @@
-<div class="grid-content myProfile">
-    <div class="grid-block">
-        <div zf-panel id="sidebar" class="large-2 medium-grid-block sidebar vertical">
-            <div class="grid-content">
-                <a zf-close class="close-button hide-for-medium">&times;</a>
-                <section class="block-list custom-block-list">
-                    <header class="title">
-                        <img src="{{myPhoto}}" class="myPhoto"></header>
-                    <ul>
-                        <li class="networkLinkBackground">
-                            <a ui-sref="myProfile.myNetworks">
-                                Networks
-                            </a>
-                        </li>
-                        <li class="spacesLinkBackground"><a>Spaces</a></li>
-                        <li class="viewAwardGalleryLinkBackground">
-                            <a ui-sref="myProfile.myAward">
-                                View Award Gallery
-                            </a>
-                        </li>
-                        <li class="nominateAnAwardLinkBackground">
-                            <a ui-sref="myProfile.selectAward">
-                                Nominate an Award
-                            </a>
-                        </li>
-                    </ul>
-                </section>
-            </div>
+<div class="grid-block my-profile">
+    <div zf-panel id="sidebar" class="large-2 medium-grid-block sidebar vertical">
+        <div class="grid-content">
+            <a zf-close class="close-button hide-for-medium">&times;</a>
+            <section class="block-list custom-block-list">
+                <header class="title">
+                    <img src="{{myPhoto}}" class="myPhoto"></header>
+                <ul>
+                    <li class="networkLinkBackground">
+                        <a ui-sref="myProfile.myNetworks">
+                            Networks
+                        </a>
+                    </li>
+                    <li class="spacesLinkBackground"><a>Spaces</a></li>
+                    <li class="viewAwardGalleryLinkBackground">
+                        <a ui-sref="myProfile.myAward">
+                            View Award Gallery
+                        </a>
+                    </li>
+                    <li class="nominateAnAwardLinkBackground">
+                        <a ui-sref="myProfile.selectAward">
+                            Nominate an Award
+                        </a>
+                    </li>
+                </ul>
+            </section>
         </div>
+    </div>
 
-        <div class="large-10 small-12 grid-content">
-                <a class="small secondary expand button hide-for-medium" zf-toggle="sidebar">Show Components</a>
-            <div ng-class="['ui-animation']" ui-view>
+    <div class="large-10 small-12 grid-content">
+        <a class="small secondary expand button hide-for-medium" zf-toggle="sidebar">Show Components</a>
+        <div ng-class="['ui-animation']" ui-view>
 
-            </div>
         </div>
     </div>
 </div>
